[project]
name = "asteroid-hazard-classifier"
version = "0.1.0"
description = "Autonomous asteroid hazard classification MLOps pipeline"
authors = [
    {name = "Govinthan K S govinthanks.aiml2023@citchennai.net"}
]
license = "MIT"
requires-python = "^3.12.1"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
